fixed scrollbar bug in firefox

--- a/src/app/signs/signs.component.scss
+++ b/src/app/signs/signs.component.scss
@@ -1,3 +1,7 @@
 mat-card {
   max-width: 250px;
 }
+
+.container {
+  padding: 10px;
+}
